--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~11.1.0",
     "core-js": "^3.8.3",
     "moment": "^2.29.1",
+    "ng2-toasty": "^4.0.3",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.2.0",
